tests/ui/const-generics/mgca/const-ctor-with-error.stderr
error[E0107]: missing generics for enum `std::option::Option`
  --> $DIR/const-ctor-with-error.rs:17:19
   |
LL |     pass_enum::<{ None }>();
   |                   ^^^^ expected 1 generic argument
   |
help: add missing generic argument
   |
LL |     pass_enum::<{ None<T> }>();
   |                       +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
